Time formating fixed, and spacing for special messages fixed

--- a/src/scss/layout/_chat.scss
+++ b/src/scss/layout/_chat.scss
@@ -80,6 +80,7 @@
     /*superlike message start*/
     .message-special {
       font-style: italic;
+      margin-top: 60px !important;
 
       .icon {
         @include circular-badge($icon-width);
